# template-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.app_name_hyphenated}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
{{cookiecutter.app_name_hyphenated}}/tests/: test_{{cookiecutter.app_name_underscored}}.py
{{cookiecutter.app_name_hyphenated}}/{{cookiecutter.app_name_underscored}}/: app.py
{{cookiecutter.project_name}}/: .gitignore  README.md  devbox.json  justfile  pyproject.toml
{{cookiecutter.project_name}}/src/: main.py
{{cookiecutter.project_name}}/tests/: test_main.py
