[project]
name = "{{ cookiecutter.app_name_hyphenated }}"
version = "0.1"
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}"}]
license = ""
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
{% if cookiecutter.github_username %}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name_hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name_hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name_hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name_hyphenated }}/actions"
{% endif %}
[project.scripts]
{{ cookiecutter.app_name_hyphenated }} = "{{ cookiecutter.app_name_underscored }}.app:run"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
    "pytest",
    "ty>=0.0.1a6",
]
