[project]
name = "{{ cookiecutter.app_name_hyphenated }}"
version = "0.1"
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}"}]
{% if cookiecutter.license -%}
license = "{{ cookiecutter.license }}"
{%- endif %}
requires-python = ">=3.14"
classifiers = []
dependencies = [
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
{% if cookiecutter.github_username %}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name_hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name_hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name_hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name_hyphenated }}/actions"
{% endif %}
[project.scripts]
{{ cookiecutter.app_name_hyphenated }} = "{{ cookiecutter.app_name_underscored }}.app:run"

[tool.ty.rules]
unresolved-import = "ignore"
# TODO: Unable to resolve submodules: https://github.com/astral-sh/ty/issues/445
unresolved-attribute = "ignore"
# TODO: Unable to work with **kwargs: https://github.com/astral-sh/ty/issues/247
missing-argument = "ignore"
